--- a/back/package.json
+++ b/back/package.json
@@ -1,9 +1,18 @@
 {
+  "scripts": {
+    "start": "nodemon --exec ts-node src/server.ts"
+  },
   "dependencies": {
-    "express": "^4.21.1"
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "nodemon": "^3.1.7"
   },
   "devDependencies": {
+    "@types/dotenv": "^8.2.3",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.9.1"
+    "@types/node": "^22.9.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   }
 }
