--- a/back/package.json
+++ b/back/package.json
@@ -1,6 +1,6 @@
 {
   "scripts": {
-    "start": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts"
   },
   "dependencies": {
     "axios": "^1.7.7",
