--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18 AS build
 
-WORKDIR /usr/src/app
+WORKDIR /front-app
 
 COPY package.json package-lock.json ./
 RUN npm install
@@ -10,7 +10,7 @@ RUN npm run build
 
 FROM nginx:alpine
 
-COPY --from=build /usr/src/app/build /usr/share/nginx/html
+COPY --from=build /front-app/build /usr/share/nginx/html
 
 EXPOSE 80
 
