feat: create ride confirm and ride_histories table

--- a/back/.sequelizerc
+++ b/back/.sequelizerc
@@ -1,8 +1,8 @@
 const path = require('path');
 
 module.exports = {
-  'config': path.resolve(__dirname,'database','config', 'config.json'),
-  'models-path': path.resolve(__dirname,'database','models'),
-  'migrations-path': path.resolve(__dirname,'database', 'migrations'),
-  'seeders-path': path.resolve(__dirname,'database', 'seeders'),
+  'config': path.resolve(__dirname,'src','database','config', 'config.json'),
+  'models-path': path.resolve(__dirname,'src','database','models'),
+  'migrations-path': path.resolve(__dirname,'src','database', 'migrations'),
+  'seeders-path': path.resolve(__dirname,'src','database', 'seeders'),
 };
