--- a/back/tsconfig.json
+++ b/back/tsconfig.json
@@ -9,5 +9,5 @@
     "forceConsistentCasingInFileNames": true,
     "outDir": "./dist"
   },
-  "include": ["src/**/*.ts", "database/**/*.ts"],
+  "include": ["src/**/*.ts", "src/database/**/*.ts"],
 }
