--- a/front/Dockerfile
+++ b/front/Dockerfile
@@ -8,10 +8,6 @@ RUN npm install
 COPY . .
 RUN npm run build
 
-FROM nginx:alpine
-
-COPY --from=build /front-app/build /usr/share/nginx/html
-
 EXPOSE 80
 
-CMD ["nginx", "-g", "daemon off;"]
+CMD ["npm", "run", "start"]
